# napari-deepmeta

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.napari/: config.yml
deepmeta/: __init__.py  _dock_widget.py  deepmeta_functions.py
deepmeta/_tests/: test_deepmeta_functions.py  test_dock_widget.py  test_function.py  test_reader.py  test_writer.py  test_z.py
deepmeta/resources/: souris_8.tif
docs/: conf.py  deepmeta_functions.rst  index.rst  widgets.rst
src/napari_deepmeta/: __init__.py  _widget.py  deepmeta_functions.py  models.py  napari.yaml
src/napari_deepmeta/_tests/: test_widget.py
src/napari_deepmeta/resources/: model.pth
