[metadata]
name = napari-deepmeta

description = Mice lungs and metastases segmentation tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EdgarLefevre/napari-deepmeta
author = Edgar Lefevre
author_email = lefevreedg@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/EdgarLefevre/napari-deepmeta/issues
    Documentation = https://github.com/EdgarLefevre/napari-deepmeta#README.md
    Source Code = https://github.com/EdgarLefevre/napari-deepmeta
    User Support = https://github.com/EdgarLefevre/napari-deepmeta/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-deepmeta = napari_deepmeta:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
